force-app/main/default/objects/onemergefree__MergeLogEntry__c/onemergefree__MergeLogEntry__c.object-meta.xml
<CustomObject>
    <label>Merge Log Entry</label>
    <nameField>
        <displayFormat>MLOG{000000000}</displayFormat>
        <label>MergeLogEntryNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>