force-app/main/default/objects/onemergefree__MergeLogEntry__c/fields/onemergefree__FunctionalArea__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__FunctionalArea__c</fullName>
    <label>Functional Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>