force-app/main/default/objects/onemergefree__MergeLogEntry__c/fields/onemergefree__LogType__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__LogType__c</fullName>
    <description>The related log type.</description>
    <inlineHelpText>The related log type.</inlineHelpText>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audit Event</fullName>
            </value>
            <value>
                <fullName>Settings Error</fullName>
            </value>
            <value>
                <fullName>Runtime Error</fullName>
            </value>
            <value>
                <fullName>Record Level Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>