force-app/main/default/objects/onemergefree__MergeLogEntry__c/fields/onemergefree__MergeJob__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MergeJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Merge Job.</description>
    <inlineHelpText>Related Merge Job.</inlineHelpText>
    <label>Merge Job</label>
    <referenceTo>onemergefree__MergeJob__c</referenceTo>
    <relationshipLabel>Merge Log Entries</relationshipLabel>
    <relationshipName>MergeLogEntries</relationshipName>
    <type>Lookup</type>
</CustomField>