force-app/main/default/objects/onemergefree__MergeLogEntry__c/fields/onemergefree__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__StackTrace__c</fullName>
    <description>Where runtime exceptions are encountered, stack traces will be recorded.</description>
    <inlineHelpText>Where runtime exceptions are encountered, stack traces will be recorded.</inlineHelpText>
    <label>Stack Trace</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>