force-app/main/default/objects/onemergefree__MergeLogEntry__c/listViews/onemergefree__Today.listView-meta.xml
<ListView>
    <fullName>onemergefree__Today</fullName>
    <columns>NAME</columns>
    <columns>onemergefree__LogType__c</columns>
    <columns>onemergefree__FunctionalArea__c</columns>
    <columns>onemergefree__Component__c</columns>
    <columns>onemergefree__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>